# babel-voip-application

./: CMakeLists.txt  Call.ui  Makefile  README.md  cmd  conanfile.txt  gui.ui  login.ui
Docs/html/: _audio_thread_8hpp_source.html  _call_8hpp_source.html  _g_u_i_8hpp_source.html  _i_audio_encoder_8hpp_source.html  _i_audio_manager_8hpp_source.html  _i_network_manager_8hpp_source.html  _iserver_8hpp_source.html  _isession_8hpp_source.html  _login_8hpp_source.html  _opus_codec_8hpp_source.html  _port_audio_8hpp_source.html  annotated.html  class_call-members.html  class_call.html  class_call__coll__graph.dot  class_call__coll__graph.md5  class_call__inherit__graph.dot  class_call__inherit__graph.md5  class_client_info-members.html  class_client_info.html  class_core-members.html  class_core.html  class_database-members.html  class_database.html  class_database__coll__graph.dot  class_database__coll__graph.md5  class_database__inherit__graph.dot  class_database__inherit__graph.md5  class_event-members.html  class_event.html  (+136 more)
client/: AudioThread.cpp  Call.cpp  GUI.cpp  Login.cpp  OpusCodec.cpp  PortAudio.cpp  clientInfo.cpp  core.cpp  event.cpp  main.cpp  networkManager.cpp
include/: AudioThread.hpp  Call.hpp  GUI.hpp  IAudioEncoder.hpp  IAudioManager.hpp  INetworkManager.hpp  Iserver.hpp  Isession.hpp  Login.hpp  OpusCodec.hpp  PortAudio.hpp  clientInfo.hpp  core.hpp  database.hpp  event.hpp  include.hpp  message.hpp  networkCode.hpp  networkManager.hpp  room.hpp  server.hpp  session.hpp
server/: database.cpp  main.cpp  message.cpp  room.cpp  server.cpp  session.cpp
(+43 files in other folders)
